tests/NormalTests/paczka1/small_fuzzy/98186070.err
Error in line 10: YnJJ7A9w2 S448 -5,4
Error in line 8: YnJJ7A9w2 S448 91,4
Error in line 12: YnJJ7A9w2 A280 37,0
Error in line 13: YnJJ7A9w2 S448 66,8
